--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="js/menu.js" defer></script>
 
-    <title>My Portfolio - Rafael</title>
+    <title>My Portfolio</title>
 </head>
 
 <body>
