--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <p>CSS é a linguagem usada para descrever a apresentação de um documento HTML. Ele controla o layout, cores, fontes e outros aspectos visuais das páginas web.                                          </p>
                     </div>
                 </a>    
-                <a href="https://github.com/RafaSpeak/My-Portfolio-/commit/1cb1e8fcc99a653547c07d1f527ac7f8ce1093f9" class="link-sem-sublinhado">    
+                <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/js/menu.js" class="link-sem-sublinhado">    
                     <!-- .especialidades-box -->
                     <div class="especialidades-box">                      
                         <i class="bi bi-filetype-js"></i>
@@ -160,7 +160,7 @@
         <section class="formulario" id="contato">
             <div class="interface">
                 <h2 class="titulo">Dúvidas <span>Email</span></h2>
-                <form action="https://api.staticforms.xyz/submit" method="post">
+                <form action="C:/Users/rafae/Desktop/Coisas%20Importantes/My-Portfolio/index.html" method="post">
                     <input type="text" name="name"placeholder="Nome e sobrenome"required autocomplete="off">
                     <input type="text" name="email"placeholder="Seu melhor e-mail"required>
                     <input type="text" name="phone"placeholder="Número de celular" autocomplete="off">
@@ -169,11 +169,11 @@
                         <input type="submit" value="Enviar">
                     </div>
                     
-                    <input type="hidden" name="accessKey" value="acbd9c3b-f18b-4c98-9cb2-677ed8c90aa7">
-                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/thankyou.html">
+        
                 </form>
             </div>
             <!-- .interface -->
+
         </section>
         <!-- .formulario -->
 
@@ -187,6 +187,7 @@
 
     </main>
 
+   
 
 </body>
 
