coloquei link thankyou

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <section class="formulario" id="contato">
             <div class="interface">
                 <h2 class="titulo">Dúvidas <span>Email</span></h2>
-                <form action="C:/Users/rafae/Desktop/Coisas%20Importantes/My-Portfolio/index.html" method="post">
+                <form action="https://api.staticforms.xyz/submit" method="post">
                     <input type="text" name="name"placeholder="Nome e sobrenome"required autocomplete="off">
                     <input type="text" name="email"placeholder="Seu melhor e-mail"required>
                     <input type="text" name="phone"placeholder="Número de celular" autocomplete="off">
@@ -170,7 +170,7 @@
                     </div>
                     
                     <input type="hidden" name="accessKey" value="acbd9c3b-f18b-4c98-9cb2-677ed8c90aa7">
-                    <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/thankyou.html">
+                    <input type="hidden" name="redirectTo" value="file:///C:/Users/rafae/Desktop/Coisas%20Importantes/My-Portfolio/thankyou.html">
                     
                 </form>
             </div>
