tamanho fontsize webDeveloper

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 
     <header>
+
         <div class="interface">
             <div class="logo">
                 <a href="#">
@@ -31,14 +32,14 @@
                     <li><a href="https://github.com/RafaSpeak/RafaSpeak">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/rafaeldoros%C3%A1rio/">LinkedIn</a></li>
                     <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Proyecto</a></li>
                 </ul>
             </nav>
             <!-- .menu-navegacao -->
 
             <div class="btn-contato">
                 <a href="#contato">
-                    <button>Contato</button>    
+                    <button>Contacto</button>    
                 </a>
             </div>
             <!-- .contato -->
@@ -76,10 +77,10 @@
                 <div class="flex">
                     <div class="txt-topo-site">
                         <h1>Web Developer.</h1>
-                        <p>Being a web developer is like being a digital architect, creating and maintaining websites
-                            that blend functionality and aesthetics. It's a dynamic role that requires constant
-                            innovation and adaptation to new technologies, directly impacting how we interact with the
-                            online world.</p>
+                        <p>Ser un desarrollador web es como ser un arquitecto digital, 
+                        creando y manteniendo sitios web que combinan funcionalidad y estética. 
+                        Es un rol dinámico que requiere innovación constante y adaptación a nuevas tecnologías,
+                         impactando directamente en cómo interactuamos con el mundo en línea.</p>
 
                         <div class="Download">
                             <a href="#">
@@ -111,22 +112,22 @@
                     <div class="especialidades-box">
                         <i class="bi bi-filetype-html"></i>
                         <h3>Language HTML</h3>
-                        <p>HTML é a linguagem de marcação padrão usada para criar e estruturar o conteúdo na web. Ele utiliza "tags" para definir diferentes tipos de conteúdo.                                                 </p>
+                        <p>HTML es el lenguaje de marcado estándar utilizado para crear y estructurar el contenido en la web. Utiliza "etiquetas" para definir diferentes tipos de contenido</p>
                     </div>
                 </a>
                 <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/css/style.css" class="link-sem-sublinhado">    <!-- .especialidades-box -->
                     <div class="especialidades-box">
                         <i class="bi bi-filetype-css"></i>
                         <h3>Language CSS</h3>
-                        <p>CSS é a linguagem usada para descrever a apresentação de um documento HTML. Ele controla o layout, cores, fontes e outros aspectos visuais das páginas web.                                          </p>
+                        <p>CSS es el lenguaje utilizado para describir la presentación de un documento HTML. Controla el diseño, los colores, las fuentes y otros aspectos visuales de las páginas web.</p>
                     </div>
                 </a>    
                 <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/js/menu.js" class="link-sem-sublinhado">    
                     <!-- .especialidades-box -->
                     <div class="especialidades-box">                      
                         <i class="bi bi-filetype-js"></i>
-                        <h3>Ferramentas Stack Front-end</h3>
-                        <p>Essas ferramentas e tecnologias são componentes essenciais no desenvolvimento de aplicações web modernas e frequentemente são agrupadas sob o termo "stack front-end".                            </p>
+                        <h3>Language JavaScript</h3>
+                        <p>Estas herramientas y tecnologías son componentes esenciales en el desarrollo de aplicaciones web modernas y a menudo se agrupan bajo el término "stack front-end</p>
                     </div>
                 </a>  
                     <!-- .especialidades-box -->
@@ -139,16 +140,24 @@
 
         <section class="portfolio">
             <div class="interface">
-                <h2 class="titulo">Tenha <span>Mentalidade</span></h2>
+                <h2 class="titulo">Tener <span>Mentalidad</span></h2>
                 <div class="flex">
+                    <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png" class="link-sem-sublinhado">
                     <div class="img-port" style="background-image: url('img/img-portfolio.png');">
                         <div class="overlay">Aprendizado</div>
-                    </div>
+                    </a>
+                </div> 
+
                     <div class="img-port" style="background-image: url('img/img-portfolio.png');">
-                        <div class="overlay">Conhecimento</div>
+                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png" class="link-sem-sublinhado">
+                        <div class="overlay">Conocimiento</div>
+                        </a>
                     </div>
+
                     <div class="img-port" style="background-image: url('img/img-portfolio.png');">
+                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png" class="link-sem-sublinhado">
                         <div class="overlay">Sabedoria</div>
+                        </a>
                     </div>
                 </div>
                 <!-- .flex -->
@@ -159,14 +168,14 @@
 
         <section class="formulario" id="contato">
             <div class="interface">
-                <h2 class="titulo">Dúvidas <span>Email</span></h2>
+                <h2 class="titulo">Contáctame <span>Email</span></h2>
                 <form action="https://api.staticforms.xyz/submit" method="post">
-                    <input type="text" name="name"placeholder="Nome e sobrenome"required autocomplete="off">
-                    <input type="text" name="email"placeholder="Seu melhor e-mail"required>
-                    <input type="text" name="phone"placeholder="Número de celular" autocomplete="off">
-                    <textarea name="message"placeholder="Escreva sua mensagem"required autocomplete="off"></textarea>
+                    <input type="text" name="name"placeholder="You Name"required autocomplete="off">
+                    <input type="text" name="email"placeholder="E-mail"required>
+                    <input type="text" name="phone"placeholder="Phone Number" autocomplete="off">
+                    <textarea name="message"placeholder="Your Message"required autocomplete="off"></textarea>
                     <div class="btn-enviar">
-                        <input type="submit" value="Enviar">
+                        <input type="submit" value="Send">
                     </div>
                     
                     <input type="hidden" name="accessKey" value="acbd9c3b-f18b-4c98-9cb2-677ed8c90aa7">
