--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         <div class="interface">
             <div class="logo">
-                <a href="#">
+                <!-- <a href="#"> -->
                     <img src="img/logotipo-removeb.png" alt="logotipo">
-                </a>
+                <!-- </a> -->
             </div>
             <!-- .logo -->
 
