I updated the README, added CSS reset, and added image port.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="js/menu.js" defer></script>
     <title>My Portfolio</title>
 </head>
@@ -24,7 +25,7 @@
                     <li><a href="https://github.com/RafaSpeak/RafaSpeak">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/rafaeldoros%C3%A1rio/">LinkedIn</a></li>
                     <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Proyecto</a></li>
+                    <li><a href="#portfolio">Proyecto</a></li>
                 </ul>
             </nav>
             <div class="btn-contato">
@@ -110,26 +111,26 @@
             </div>
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="interface">
-                <h2 class="titulo">Tener <span>Mentalidad</span></h2>
+                <h2 class="titulo">Mis <span>Proyectos</span></h2>
                 <div class="flex">
-                    <div class="img-port" style="background-image: url('img/img-portfolio.png');">
-                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png"
+                    <div class="img-port" style="background-image: url('./img/img-port.png');">
+                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-port.png"
                             class="link-sem-sublinhado">
-                            <div class="overlay">Aprendizado</div>
+                            <div class="overlay"></div>
                         </a>
                     </div>
-                    <div class="img-port" style="background-image: url('img/img-portfolio.png');">
-                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png"
+                    <div class="img-port" style="background-image: url('./img/img-port.png');">
+                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-port.png"
                             class="link-sem-sublinhado">
-                            <div class="overlay">Conocimiento</div>
+                            <div class="overlay"></div>
                         </a>
                     </div>
-                    <div class="img-port" style="background-image: url('img/img-portfolio.png');">
-                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-portfolio.png"
+                    <div class="img-port" style="background-image: url('./img/img-port.png');">
+                        <a href="https://github.com/RafaSpeak/Portfolio-/blob/main/img/img-port.png"
                             class="link-sem-sublinhado">
-                            <div class="overlay">Sabedoria</div>
+                            <div class="overlay"></div>
                         </a>
                     </div>
                 </div>
